---------------------------------------------------------------------------------------------------
Version: 19.1.10
Date: 2020-10-xxxxx
  Features:
  Changes:
  Bugfixes:
    - Fix error for power pole entities that aren't valid (encountered after other mods removed).
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.1.9
Date: 2020-05-02
  Features:
  Changes:
    - On technology researched no longer triggers a surface scan for hidden lights unless the research is lit power pole related.
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.1.8
Date: 2020-01-23
  Features:
    - Updated mod to Factorio 0.18 as-is
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.1.7
Date: 2019-05-21
  Features:
  Changes:
  Bugfixes:
    - handles power poles with suppy area of 0 without error. doesn't light them up. Fixes compatibility with cargoship mod.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.1.6
Date: 2019-03-26
  Features:
    - Compatible with Xander Mod
  Info:
    - Added "not-upgradable" flag to hidden entities to ensure Upgrade Planner doesn't select them.
---------------------------------------------------------------------------------------------------
Version: 17.1.5
Date: 2019-03-23
  Features:
    - Optional research added that unlocks the feature. Has a very temporary graphic.
  Info:
    - Updated changelog to 0.17 format
    - Returned mod versioning to correct order
    - Refactored code to be complaint with luacheck
    - Changed code to utilise my utily library
    - Removed work around for 0.16 surface filtered search API bug
    - Added support for script_raised events for better inter-mod compatibility
