@@ -4,6 +4,7 @@ light-power-usage-watts=Inbuilt Light Power Usage (watts)
 factory-buildings-lighted-edge-tiles=Factory Buildings Edge Tiles Lighted
 turrets-lighted-edge-tiles=Turrets Edge Tiles Lighted
 research-unlock=Require Resarch First
+inbuilt_lighting-light_brightness=Light Brightness
 
 
 [mod-setting-description]
@@ -11,6 +12,7 @@ power-pole-wire-reach-lighted-percent=The percentage of each power pole's wire r
 light-power-usage-watts=The power usage of each inbuilt light. When set to 0 watts no electrical network is required for them to work. Anything above 0 watts requires active electricity for them to work. A standard light is 5000 watts. Mod Default Setting = 0.
 turrets-lighted-edge-tiles=If all turrets are lighted and the number of tiles beyond the edge lit. Setting to 0 is just the turret size. Setting to -1 disables the feature. Use in early game only as once above 500 turrets it can slow down UPS/game speed. Mod Default Setting = -1
 research-unlock=Adds a cheap early game research that must be completed to get the lighting feature.
+inbuilt_lighting-light_brightness=The range is from 0 (no light) to 1 (full light). 0.6 is the default value.
 
 
 [api-description]
