@@ -2,6 +2,7 @@
 Version: 19.1.10
 Date: 2020-10-xxxxx
   Features:
+    - Add mod setting to control light brightness.
   Changes:
   Bugfixes:
     - Fix error for power pole entities that aren't valid (encountered after other mods removed).
